tests/specs/ecosystem/gnome/errors/0_0_0.test
gnome/errors/0.0.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Error'.
  set stack(value: string | undefined) {}
      ~~~~~
    at file://<tmpdir>/mod.ts:94:7

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'SystemError'.
  toObject(): ErrorProps & {
  ~~~~~~~~
    at file://<tmpdir>/mod.ts:165:3

Found 2 errors.

error: Type checking failed.

